--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,7 @@
     <!-- MathJax -->
     {% if site.enable_mathjax %}
     <script type="text/javascript" async
-        src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+	    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> 
     </script>
     {% endif %}
 
